--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -45,6 +45,9 @@
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
 
+        <!-- OpenDaylight messy extensions -->
+        <module>odlext-model-api</module>
+
         <!-- Metadata (annotation) metamodel support -->
         <module>rfc7952-model-api</module>
         <module>rfc7952-parser-support</module>
