--- a/yang/yang-parser-impl/pom.xml
+++ b/yang/yang-parser-impl/pom.xml
@@ -68,6 +68,10 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>odlext-model-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>rfc8040-model-api</artifactId>
         </dependency>
 
