--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -147,6 +147,11 @@
                 <artifactId>openconfig-model-api</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>openconfig-parser-support</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
