--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -45,8 +45,9 @@
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
 
-        <!-- OpenConfig (semantic version) metamodel support -->
+        <!-- OpenConfig (semantic version, hashed value) metamodel support -->
         <module>openconfig-model-api</module>
+        <module>openconfig-parser-support</module>
 
         <!-- OpenDaylight messy extensions -->
         <module>odlext-model-api</module>
