--- a/common/object-cache-api/pom.xml
+++ b/common/object-cache-api/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0</version>
         <relativePath/>
     </parent>
     <packaging>bundle</packaging>
