--- a/yang/yang-data-transform/pom.xml
+++ b/yang/yang-data-transform/pom.xml
@@ -22,6 +22,7 @@
     <version>1.2.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
+    <packaging>bundle</packaging>
 
     <dependencyManagement>
         <dependencies>
